# eeg-to-hypnogram

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: edflib.cmake
docs/: edf_reader_doc.md
include/eeg_to_hypnogram/: dataset_builder.h  dataset_manifest.h  dataset_split.h  edf_reader.h  epoch.h  experiment_runner.h  feature_extraction.h  random_forest_baseline.h  sleep_stage.h  temporal_context.h  training_pipeline.h
src/core/: dataset_builder.cpp  dataset_manifest.cpp  dataset_split.cpp  edf_reader.cpp  epoch.cpp  experiment_runner.cpp  feature_extraction.cpp  random_forest_baseline.cpp  sleep_stage.cpp  temporal_context.cpp  training_pipeline.cpp
tests/: dataset_builder_test.cpp  dataset_manifest_test.cpp  dataset_split_test.cpp  edf_reader_test.cpp  epoch_test.cpp  experiment_runner_test.cpp  feature_extraction_test.cpp  random_forest_baseline_test.cpp  sleep_stage_test.cpp  temporal_context_test.cpp  training_pipeline_test.cpp
